# onnxruntime-extensions

./: CMakeLists.txt  pyproject.toml  requirements-dev.txt  setup.py
.pipelines/: OneBranch.PullRequest.yml
